[package]
name = "aegiss"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src-rust/lib.rs"

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"

# Crypto & Security
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
chacha20poly1305 = "0.10"
blake3 = "1"
subtle = "2"
hex = "0.4"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }

# Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
base64 = "0.22"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
